# agent-k

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
agent_k/agents/: autogen_demo.ipynb  base_agent.py  code_agent_openai.py  code_agent_react.py  db_agent.py  pdf_agent.py  pdf_agent_autogen.py  pdf_agent_fast_n_slow.py  pdf_agent_openai.py  python_code_exec_agent.py
agent_k/config/: experiment_config.py  general.py  logger.py  prompts.py  prompts_db_agent.py  prompts_fast_n_slow.py  schemas.py
agent_k/eval/: df_merged.csv  eval_db_agent.py  eval_db_agent_w_mrds.py  eval_db_agent_w_pdf_extraction.py  eval_pdf_agent.py  eval_pdf_extraction.py  eval_pdf_extraction_inferlink.py
agent_k/experiments/: aggr_inferlink_extraction_v3.ipynb  batch_extraction.ipynb
agent_k/notebooks/: agentic_rag_v5.py  code_interpreter_poc.ipynb  docling_parsing.ipynb  fast_n_slow.ipynb  fast_n_slow.py  paper_plots.ipynb  playground.ipynb  react_code_agent.ipynb  react_code_agent.py  react_fast_n_slow.ipynb  self_rag.ipynb  self_rag_v2.ipynb  self_rag_v2.py  self_rag_v3.ipynb  self_rag_v3.py  self_rag_v4.ipynb  self_rag_v4.py  self_rag_v5.ipynb  self_rag_v5.py  subset_43_101_gt.ipynb
agent_k/setup/: aggr_inferlink_extraction_v3.ipynb  construct_eval_set.py  construct_inferlink_eval.py  docling_parsing.ipynb  download_43_101.py  download_hyper.py  download_mrds.py  load_43_101.py  load_mrds.py  setup_all.py  start_postgres.sh  stop_postgres.sh
agent_k/tools/: chat_messages.py  python_code_interpreter.py  tool_interface.py  tool_manager.py
agent_k/utils/: dataservice_utils.py  db_utils.py  delete_vector_stores.py  eval_helper.py  general.py  listable_class.py  load_mrds.py  minmod_sparql.py  ms_model.py  preprocessing.py
data/eval/: .gitignore  analysis_master.xlsx.dvc  eval_results_nickel_20250121235644.csv.dvc  eval_results_nickel_20250202184440.csv.dvc  eval_results_nickel_20250202191832.csv.dvc  eval_results_nickel_v1_20250101011105.csv.dvc  eval_results_nickel_v2_20241231183551.csv.dvc  eval_results_nickel_v3_20250106213228.csv.dvc  eval_results_nickel_v3_20250111191733.csv.dvc  eval_set_matched_based_nickel_v1.jsonl.dvc  eval_set_matched_based_nickel_v2.jsonl.dvc  eval_set_matched_based_nickel_v3.jsonl.dvc  eval_set_matched_based_nickel_vX.jsonl.dvc  pdf_extraction_eval_nickel_20250227210716_baseline.csv.dvc  pdf_extraction_eval_nickel_20250301145155.csv.dvc  pdf_extraction_eval_nickel_20250302155009.csv.dvc  pdf_extraction_eval_nickel_20250302185642.csv.dvc
data/experiments/: .gitignore  eval_set_token_counts.png.dvc  results_formatted_for_paper.xlsx.dvc  ~$results_formatted_for_paper.xlsx
docker/: Dockerfile
notebooks/: token_distr_plot.ipynb
paper/: README.md  data.dvc  eval.py  eval_pdf_extraction_inferlink.py  paper_plots.ipynb  setup.ipynb
paper/experiments/: ablation_tests.py  agentic_rag_v6.py  agentic_rag_v7.py  aggr_inferlink_extraction_v3.ipynb  aggr_inferlink_extraction_v3.py  batch_extraction.ipynb  batch_extraction.py  extract_reason_exec.ipynb  llm_model_demo.py  pdf_agent_fast_n_slow.py  playground.ipynb  self_rag_v2.ipynb  self_rag_v2.py  tat_llm.ipynb  tat_llm.py  utils.py
src/: eval.py  setup.py
src/config/: experiment_config.py  logger.py  (+3 more)
(+950 files in other folders)
