[project]
name = "agent-k"
version = "0.1.0"
description = "An extremely fast Python package and project manager, written in Rust."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.10",
    "asyncio>=3.4.3",
    "autogen-agentchat~=0.4",
    "autogen-ext[openai]>=0.4.0",
    "duckdb>=1.1.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "markitdown>=0.0.1a2",
    "openai>=1.58.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.4",
    "simplejson>=3.19.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.3",
]

[tool.ruff.lint]
# Enable on top of default:
# flake8-bugbear (`B`)
# isort ("I") rules
# E302 blank-lines-top-level
select = ["E4", "E7", "E9", "F", "B", "I"]
