[project]
name = "agent-k"
version = "0.1.0"
description = "A powerful knowledge base agentic system that uses LLM agents to help you interact with tables and PDF reports."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.10",
    "asyncio>=3.4.3",
    "autogen-agentchat~=0.4",
    "autogen-ext[openai]>=0.4.0",
    "chromadb>=0.6.3",
    "datasets>=3.3.0",
    "docling>=2.26.0",
    "duckdb>=1.1.3",
    "httpx>=0.28.1",
    "langchain-community>=0.3.18",
    "langchain-openai>=0.3.6",
    "langchain[openai]>=0.3.19",
    "langgraph>=0.2.74",
    "levenshtein>=0.26.1",
    "litellm>=1.61.6",
    "loguru>=0.7.3",
    "markitdown>=0.0.1a2",
    "matplotlib>=3.10.0",
    "openai>=1.58.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "simplejson>=3.19.3",
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.3",
]

[tool.ruff.lint]
# Enable on top of default:
# flake8-bugbear (`B`)
# isort ("I") rules
# E302 blank-lines-top-level
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["B005"]
